# GarfieldGaP

./: README.md  createrunfiles.py  sbatch_createrunfiles.py  sbatch_createrunfiles_2ringFC.py  sbatch_createrunfiles_2ringFC_GasMedium.py  sbatch_createrunfiles_FC2Ring.py  script_python_createfiles.sh
Electroluminescence/: CMakeLists.txt  CRAB.C  Mesh.C  MeshGaP_GasMedium.C  Mesh_noPrint.C  TrackSim.C
Electroluminescence/gases/: ar_10.0bar.gas  ar_15bar.gas  ar_2.5bar_new.gas  ar_3.5bar.gas  ar_4.0bar.gas  ar_5bar.gas  xe_10bar.gas  xe_15bar.gas  xe_2.5bar.gas  xe_4.5bar.gas  xe_5bar.gas  xe_7.5bar.gas  xe_8.5bar.gas
Electroluminescence/job_krishian/: CRAB_Mesh_job.sh  launch_array_jobs.sh
Electroluminescence/jobs/: Mesh_job_L.sh  Mesh_job_L_GasMedium.sh  launch_array_jobs.sh  sbatchMesh2ringFC_GasMedium_job.sh  sbatchMesh2ringFC_job.sh  sbatchMesh_job.sh
Electroluminescence/notebooks/.ipynb_checkpoints/: StudyMapGeneration-checkpoint.ipynb
GasFile/: CMakeLists.txt  README.md  generate  generate.C  merge  penning  plotcs  plotcs.C  printTable  read  read.C  read.py
sbatch_scripts/: Mesh-10000V_1.5bar.sh  Mesh-10000V_2.5bar.sh  Mesh-10000V_3.5bar.sh  Mesh-10000V_4.5bar.sh  Mesh-10000V_5.5bar.sh  Mesh-10000V_6.5bar.sh  Mesh-10000V_7.5bar.sh  Mesh-10000V_8.5bar.sh  Mesh-10500V_1.5bar.sh  Mesh-10500V_2.5bar.sh  Mesh-10500V_3.5bar.sh  Mesh-10500V_4.5bar.sh  Mesh-10500V_5.5bar.sh  Mesh-10500V_6.5bar.sh  Mesh-10500V_7.5bar.sh  Mesh-10500V_8.5bar.sh  Mesh-11000V_1.5bar.sh  Mesh-11000V_2.5bar.sh  Mesh-11000V_3.5bar.sh  Mesh-11000V_4.5bar.sh  Mesh-11000V_5.5bar.sh  (+275 more)
(+704 files in other folders)
